--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/elements": "^7.2.15",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
     "core-js": "^2.5.4",
+    "document-register-element": "^1.7.2",
+    "ngx-color-picker": "^7.5.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
