--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "core-js": "^2.5.4",
     "document-register-element": "^1.7.2",
-    "ngx-color-picker": "^7.5.0",
+    "@stebneruslan/ngx-color-picker": "^9.1.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
