--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stebneruslan/custom-color-picker",
-  "version": "0.0.1",
+  "version": "0.0.17",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,11 +20,11 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@stebneruslan/ngx-color-picker": "^9.1.17",
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "core-js": "^2.5.4",
     "document-register-element": "^1.7.2",
     "ngx-build-plus": "^9.0.6",
-    "ngx-color-picker": "^9.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
